# ShallowSWE

./: .gitignore  AGENTS.md  README.md  SPEC.md  pyproject.toml
configs/: README.md  deepswe-cpsc-v0.1.json  deepswe-cpsc-v0.2.json  deepswe-cpsc-v0.3.json  deepswe-cpsc-v0.4.json  mini-swe-agent-calibration-long.yaml  mini-swe-agent-calibration.yaml  mini-swe-agent-kaggle-repair-loop.yaml  mini-swe-agent-repair-loop-preview.yaml  shallowswe-repair-loop-preview-n3-18-v0.2-config-rollover-temp.json  shallowswe-repair-loop-preview-n3-18-v0.2-kimi-k3.json  shallowswe-repair-loop-preview-n3-18.json  shallowswe-six-task-pilot-v0.3-development-shadow-launch-plan.json  shallowswe-six-task-pilot-v0.3-launch-plan.json  shallowswe-six-task-pilot-v0.3-schedule.json  shallowswe-six-task-pilot-v0.3.json  shallowswe-v1-calibration-plan.json  shallowswe-v1-task-funnel-tranche-1.json
docs/: README.md  calibration-log.md  calibration-protocol.md  codex-subscription-calibration-2026-07-06.md  deepswe-cpsc-amendments-v0.2.md  deepswe-cpsc-amendments-v0.3.md  deepswe-cpsc-amendments-v0.4.md  deepswe-cpsc-preanalysis.md  development-rehearsal-v0.1.md  kaggle-benchmarks-probe-2026-07-08.md  kaggle-runner.md  medium-large-refill-candidate-cards.md  methodology.md  pier-integration.md  pilot-plan.md  protocol-governance.md  six-task-pilot-launch-runbook.md  six-task-pilot-protocol-v0.3.md  six-task-routine-review-packet.md  t4-candidate-cards.md  task-quality-audit.md  task-selection-rubric.md  task-shape-catalog.md  task-sourcing-methodology.md  transcript-task-mining.md  v1-task-matrix.md  (+4 more)
(+2590 files in other folders)
