[project]
name = "shallowswe"
version = "0.1.0"
description = "Cost-first benchmark for shallow software engineering tasks."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datacurve-pier>=0.3.0",
]

[project.scripts]
shallowswe = "shallowswe.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shallowswe"]

[tool.ruff]
line-length = 100
target-version = "py311"
